<resources>
    <string name="app_name">Floran-chatty</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="select_photo">Select Photo</string>
    <string name="profile_pic">Profile pic</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_messages">New Messages</string>
    <string name="enter_messages">Enter Messages</string>
    <string name="send">Send</string>
    <string name="this_is_my_text">This is my text</string>
    <string name="latest_message">latest message</string>
</resources>