<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".registerlogin.RegisterActivity">

    <EditText
        android:id="@+id/usernmae_edittext_register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_register"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edittext_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_photo_view_register" />

    <EditText
        android:id="@+id/email_edittext_register"
        style="@style/custom_plaintext_style"
        android:background="@drawable/rounded_edittext_register"
        android:hint="@string/email"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext_register"
        app:layout_constraintEnd_toEndOf="@+id/usernmae_edittext_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/usernmae_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/usernmae_edittext_register" />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_register"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

    <Button
        android:id="@+id/register_button_register"
        style="@style/login_register_button_style"
        android:background="@drawable/rounded_edittext_register"
        android:text="@string/register"
        android:textColor="#0C0808"
        android:textStyle="bold"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/already_account_textview"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

    <TextView
        android:id="@+id/already_account_textview"
        style="@style/login_register_text_style"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/profile_pic"
        android:background="@drawable/image_round_button"
        android:src="@drawable/resource_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_photo_view_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/usernmae_edittext_register"
        app:layout_constraintEnd_toEndOf="@+id/profile_pic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="@+id/profile_pic"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@drawable/resource_default" />
</androidx.constraintlayout.widget.ConstraintLayout>