<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50">

    <EditText
        android:id="@+id/email_edittexr_login"
        style="@style/custom_plaintext_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_edittext_register"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_edittext_login"
        style="@style/custom_plaintext_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="@+id/email_edittexr_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_edittexr_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edittexr_login" />

    <Button
        android:id="@+id/login_button_login"
        style="@style/login_register_button_style"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textColor="#070606"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/create_an_account"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_login" />

    <TextView
        android:id="@+id/create_an_account"
        style="@style/login_register_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edittexr_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/floran_chatty_removebg_preview" />
</androidx.constraintlayout.widget.ConstraintLayout>